heat map and eq

--- a/app.html
+++ b/app.html
@@ -28,8 +28,7 @@
             <h2>Selected Option</h2>
             <p id="selected-option-info"></p>
         </div>
-
-        <div id="heat-map"></div>
+        <div id="heatmap-container"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
